add documentation for code, and change plan, and end projects CRUD operation
